@@ -182,6 +182,7 @@ since 1999.  If I missed your name, let me know.
 * Martin Mielke
 * Christian Mies
 * Gary Miller
+* Peter Valdemar Morch
 * James Moseley
 * Tobias Mucke
 * Gerd Mueller
