@@ -38,6 +38,7 @@ FIXES
 * Fix for event execution loop re-scheduling host checks instead of executing them if service checks are disabled (bug #152)
 * Fix for segfaults on Solaris (Torsten Huebler)
 * Fix for incorrect comment expiration times being passed to event broker (Mattieu Kermagot)
+* Doc updates related to cleaning of custom macros (Peter Valdemar Morch)
 
 WARNINGS
 
